# rust-axum-htmx-askama-tailwind-template

./: Cargo.toml  README.md  package-lock.json
src/: main.rs
