[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.0", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = { version = "0.6" }

axum = { version = "0.7", features = ["http2", "macros"]}
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = { version = "0.4" }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "mime-guess", "axum-ex"] }

